--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
         function create() {
           this.snakeBody = [];
+          this.food;
           this.direction = "RIGHT"; // Initial direction
           this.lastMoveTime = 0; // Time of the last move
           this.moveInterval = 200; // Time in ms between moves
@@ -83,6 +84,27 @@
           });
         }
 
+        function update(time) {
+          if (this.isGameOver) {
+            // Stop the game completely
+            this.scene.pause();
+            return;
+          }
+
+          if (time - this.lastMoveTime >= this.moveInterval) {
+            const ateFood =
+              this.snakeBody[0].x === this.food.x &&
+              this.snakeBody[0].y === this.food.y;
+            moveSnake.call(this, {
+              snakeBody: this.snakeBody,
+              gridSize: this.gridSize,
+              ateFood,
+              food: this.food,
+            });
+            this.lastMoveTime = time;
+          }
+        }
+
         function createSnake() {
           // Get grid column and row numbers
           const gridColumns = Math.floor(
@@ -122,6 +144,8 @@
           for (const part of this.snakeBody) {
             this.add.existing(part);
           }
+
+          createFood.call(this, this.snakeBody);
         }
 
         function createPart({ column, row, gridSize }) {
@@ -139,21 +163,37 @@
           return part;
         }
 
-        function update(time) {
-          if (this.isGameOver) {
-            // Stop the game completely
-            this.scene.pause();
-            return;
-          }
-
-          if (time - this.lastMoveTime >= this.moveInterval) {
-            moveSnake.call(this, this.snakeBody, this.gridSize);
-            this.lastMoveTime = time;
-          }
-        }
-
-        function moveSnake(snakeBody, gridSize) {
+        function moveSnake({ snakeBody, gridSize, ateFood, food }) {
           // Move the body parts
+          if (ateFood) {
+            const lastPart = snakeBody[snakeBody.length - 1];
+            let newX = lastPart.x;
+            let newY = lastPart.y;
+
+            if (this.direction === "UP") {
+              newY += gridSize;
+            } else if (this.direction === "DOWN") {
+              newY -= gridSize;
+            } else if (this.direction === "LEFT") {
+              newX += gridSize;
+            } else if (this.direction === "RIGHT") {
+              newX -= gridSize;
+            }
+
+            const newPart = new Phaser.GameObjects.Rectangle(
+              this,
+              newX,
+              newY,
+              gridSize,
+              gridSize,
+              0xfcba03
+            );
+            newPart.setStrokeStyle(1, 0xffffff);
+            snakeBody.push(newPart);
+            this.add.existing(newPart);
+
+            repositionFood.call(this, { snakeBody, food });
+          }
           for (let i = snakeBody.length - 1; i > 0; i--) {
             snakeBody[i].x = snakeBody[i - 1].x;
             snakeBody[i].y = snakeBody[i - 1].y;
@@ -181,6 +221,93 @@
             this.isGameOver = true; // Set the game over flag
             console.log("Game Over! The snake hit the wall.");
           }
+        }
+
+        function createFood(snakeBody) {
+          const gridColumns = Math.floor(
+            this.game.config.width / this.gridSize
+          );
+          const gridRows = Math.floor(this.game.config.height / this.gridSize);
+
+          let foodColumn;
+          let foodRow;
+          let foodPositionIsValid = false;
+
+          // Keep generating food until it's in a valid position
+          while (!foodPositionIsValid) {
+            foodColumn = Phaser.Math.Between(0, gridColumns - 1);
+            foodRow = Phaser.Math.Between(0, gridRows - 1);
+
+            // Check if the food position is not inside the snake's body
+            const foodPosition = { column: foodColumn, row: foodRow };
+            foodPositionIsValid = !isSnakeAtPosition({
+              snakeBody,
+              foodPosition,
+            });
+          }
+
+          // Create the food
+          const xPosition = foodColumn * this.gridSize + this.gridSize / 2;
+          const yPosition = foodRow * this.gridSize + this.gridSize / 2;
+          const food = new Phaser.GameObjects.Rectangle(
+            this,
+            xPosition,
+            yPosition,
+            this.gridSize,
+            this.gridSize,
+            0xf78383
+          );
+          food.setStrokeStyle(1, 0xffffff);
+          this.food = food;
+          this.add.existing(food);
+        }
+
+        function repositionFood({ snakeBody, food }) {
+          console.log("snakeBody: ", snakeBody);
+          const gridColumns = Math.floor(
+            this.game.config.width / this.gridSize
+          );
+          const gridRows = Math.floor(this.game.config.height / this.gridSize);
+
+          let foodColumn;
+          let foodRow;
+          let foodPositionIsValid = false;
+
+          // Keep generating food until it's in a valid position
+          while (!foodPositionIsValid) {
+            console.log("hi");
+            foodColumn = Phaser.Math.Between(0, gridColumns - 1);
+            foodRow = Phaser.Math.Between(0, gridRows - 1);
+
+            // Check if the food position is not inside the snake's body
+            const foodPosition = { column: foodColumn, row: foodRow };
+            foodPositionIsValid = !isSnakeAtPosition({
+              snakeBody,
+              foodPosition,
+            });
+          }
+
+          // Create the food
+          const xPosition = foodColumn * this.gridSize + this.gridSize / 2;
+          const yPosition = foodRow * this.gridSize + this.gridSize / 2;
+          food.x = xPosition;
+          food.y = yPosition;
+          console.log(xPosition);
+          console.log(yPosition);
+        }
+
+        function isSnakeAtPosition({ snakeBody, foodPosition }) {
+          console.log("snakebody length: ", snakeBody.length);
+          // Check if the snake's body contains the given position
+          for (const part of snakeBody) {
+            if (
+              part.x === foodPosition.column * this.gridSize &&
+              part.y === foodPosition.row * this.gridSize
+            ) {
+              return true;
+            }
+          }
+          return false;
         }
       </script>
     </main>
